--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,104 @@
-.attribution { 
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+.attribution{ 
     font-size: 11px; 
     text-align: center; 
+    position:absolute;
+    bottom:20px;
+}
+.explain{
+    font-size:12px;
+    text-align:center;
+}
+.error{
+    font-size:12px;
+    text-align:right;
 }
 .attribution a { 
     color: hsl(228, 45%, 44%); 
+}
+.bg-dark-blue{
+    background-color:hsl(248, 32%, 49%);
+    box-shadow: 0px 7px rgba(0,0,0,0.2);
+}
+html{
+    width:100%;
+}
+body{
+    background-color:hsl(0, 100%, 74%);
+    font-size:16px;
+    font-family:'Poppins';
+}
+
+/*.b-grayish-blue{
+    border-color:hsl(246, 25%, 77%);
+}
+.error{
+    border-color:hsl(0, 100%, 74%);
+}*/
+input::placeholder {
+    font-weight: bold;
+}
+.icon{
+    background-image:url("./../images/icon-error.svg");
+    background-repeat:no-repeat;
+    background-position:center right 20px;
+    
+}
+.bg-green{
+    background-color:hsl(154, 59%, 51%);
+    border-bottom:5px;
+    border-style:solid;
+    border-color:hsl(154, 59%, 46%);
+}
+.bg-green:hover{
+    background-color:hsla(154, 59%, 51%,.8);
+}
+
+.color-red{
+    color:hsl(0, 100%, 74%) ;
+}
+.color-gray{
+    color: var(--bs-gray-500);
+}
+@media screen and (max-width:1399px){
+    body{
+        background-image:url("./../images/bg-intro-mobile.png");
+        flex-direction:column;
+    }
+    .fix-width{
+        width:320px;
+    }
+    .w-85{
+        width:85%;
+    }
+    h1{
+        text-align:center;
+    }
+    
+}
+@media screen and (min-width:1400px){
+    html{
+        height:100%;
+    }
+    body{
+        background-image:url("./../images/bg-intro-desktop.png");
+        flex-direction:row;
+        height:100%;
+    }
+    .fix-width{
+        width:540px;
+    }
+    .w-85{
+        width:85%;
+    }
+    header{
+        width:540px;
+    }
+    h1{
+        text-align:left;
+    }
+    .slim{
+        width:70%;
+    }
+    
 }
