--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,9 @@
 .attribution{ 
     font-size: 11px; 
     text-align: center; 
-    position:absolute;
-    bottom:20px;
+    width:100%;
 }
+
 .explain{
     font-size:12px;
     text-align:center;
@@ -29,12 +29,6 @@ body{
     font-family:'Poppins';
 }
 
-/*.b-grayish-blue{
-    border-color:hsl(246, 25%, 77%);
-}
-.error{
-    border-color:hsl(0, 100%, 74%);
-}*/
 input::placeholder {
     font-weight: bold;
 }
@@ -42,7 +36,6 @@ input::placeholder {
     background-image:url("./../images/icon-error.svg");
     background-repeat:no-repeat;
     background-position:center right 20px;
-    
 }
 .bg-green{
     background-color:hsl(154, 59%, 51%);
@@ -99,6 +92,10 @@ input::placeholder {
     }
     .slim{
         width:70%;
+    }
+    footer{
+        position:absolute;
+        bottom:-20px;
     }
     
 }
